# openGL

./: CMakeLists.txt
dependencies/glad/: glad.h
src/: config.h  glad.c  main.cpp  test.cpp
